force-app/main/default/objects/Secondary_Credit_Note__c/Secondary_Credit_Note__c.object-meta.xml
<CustomObject>
    <label>Secondary Credit Note</label>
    <nameField>
        <displayFormat>CN-{0000}</displayFormat>
        <label>Secondary Credit Note Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Secondary Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>