force-app/main/default/objects/Secondary_Credit_Note__c/fields/Distributor__c.field-meta.xml
<CustomField>
    <fullName>Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Secondary Credit Notes (Distributor)</relationshipLabel>
    <relationshipName>Secondary_Credit_Notes1</relationshipName>
    <type>Lookup</type>
</CustomField>