force-app/main/default/objects/Secondary_Credit_Note__c/fields/Not_in_Use__c.field-meta.xml
<CustomField>
    <fullName>Not_in_Use__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Return</label>
    <referenceTo>Primary_Return__c</referenceTo>
    <relationshipLabel>Secondary Credit Notes</relationshipLabel>
    <relationshipName>Secondary_Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>