force-app/main/default/objects/Secondary_Credit_Note__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Price Difference</fullName>
            </value>
            <value>
                <fullName>Discounts or Rebates</fullName>
            </value>
            <value>
                <fullName>Adjusting Tax Liability</fullName>
            </value>
            <value>
                <fullName>Invoice Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>