force-app/main/default/objects/Secondary_Credit_Note__c/fields/Secondary_Credit_Note_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Credit_Note_Name__c</fullName>
    <displayFormat>CN - {0000}</displayFormat>
    <label>Secondary Credit Note Name</label>
    <type>AutoNumber</type>
</CustomField>